+ Included parent class for the atkmockquery. [Martin]
+ Added type="text/css" attribute to <style> tags. [Guido]
+ Added support for row and col span in the atkTableRenderer. [Sandy]
+ Added NOLOAD constant for use in atkAttribute's loadType() method. [Ivo]
+ Added ability to set a CSS class per row, column or cell. [Guido]
* Introduced atkeditlng which can be passed along to force ML attributes to
  display a specific language. [Boy]
* Fixed a bug in the 'remove current file' feature of atkFileAttribute when
  AF_FILE_PHYSICAL_DELETE was set. [Ivo]
* atkNode's validateFilter method can now cope with sql 'IN' operator. [Yury]
* Also collect timing info at debuglevel 0 for mailreports. [Boy]
* Fixed php warning in atkMlNumberAttribute. [Ivo]
* Fixed error in triggerError method when atkLanguage was not imported. [Ivo]
* Fixed table definition of lesson 7 of the demo application. [Ivo]
* Fixed bug where postDelete trigger would be called twice. [Peter, Sandy]
* The preDelete trigger will now be called separately for each (to be) deleted
  record (instead of being called only once with the complete recordset). THIS
  CHANGE IS NOT BACKWARDS COMPATIBLE! [Peter, Sandy]
* Temporarily disabled searching and sorting in the recordlist
  of an 1:n relation. This feature is broken. [Martin]
* Fixed loading of atktab from URL. [Boy]
* Fixed loading of tests from modules outside the application root which would
  sometimes do tests twice, with special module paths. [Boy]
* The atkdebugger is now passed an atkprevlevel of 0 instead of the originating
  atklevel (which caused it to lose it's debugging info). [Boy]
* atkMLSplitter now uses atklng variable instead of 
  deprecated lng variable. [Boy]
* Fixed a notice that users with Norton Internet Security or other popup
  blockers that remove headers may see. [Ivo]
- Removed atk/styles.css as this only belongs in themes. [Ivo]
- Default styles.css file from an application's root is no longer loaded by
  default. [Ivo]
